# image-gen-cli

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
docs/: cli_guidelines.md
src/: imagegen.py
src/image_gen_cli/: cli.py  generate.py
tests/: conftest.py  test_cli.py  test_generate.py
