[project]
name = "image-gen-cli"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.34.0",
]

[project.scripts]
image-gen = "image_gen_cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/image_gen_cli"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
